--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       :root{
         --primary-color: #120710;
         --secondary-color: #363859;
-        --text-color: #ababab;
+        --text-color: #e3e3e3;
       }
       
       .dark{
